Wednesday, December 12 2001, James Turner

	* Added Quaternion class to Types.h and Types.cpp
	* Added _orientation member to Entity, an accessor and code in
	  recvMode to process it.
	* Added a temporary check for the Acorn 0.3/0.4 'face' attribute,
	  and map it to a quaternion if the orientation attr is not found.
	  This can be removed in a few weeks, but takes the pressure off
	  alriddoch to update cyphesis-C++ 'right now'.
	  
	  All of the above is untested becuase I don't have a graphical client
	  to test with; it compiles fine, and it's pretty simple, but
	  beyond that I'm not sure.

	* Moved an assert in Room.cpp (line 244) whcih was a bit premature
	
Wednesday, December 12 2001, James Turner

	* Fixed OOG recvAppearance/Disappearance to handle multiple
	  entities in ARGS. (RT ticket #165). I have verified that the current
	  behaviour still works, can't test the actual multi-args becuase
	  no server sends that format (I think)
	* Added getVelocity accessor to Entity, which somehow got left out
	* Updated Entity::recvMove to update the velocity value.

Thursday, December 06 2001, Al Riddoch
	* Strict C++ compliance fixes, tested with gcc3.

Thursday, November 29 2001, Al Riddoch
	* src/atlas_utils.h: Avoid copying twice when casting.
	* src/Utils.cpp, src/Utils.h: Return const objects.
	* src/Types.cpp, src/Types.h, src/Entity.cpp: Remove support for
	  bmedian attribute now deprecated.

Thursday, November 29 2001, James Turner

	* Changed to actually call World::mark[Inv|V]isible from
	  Entity::setVisible; thus the IEC gets some testing.
	* Handle various edge-cases in the IEC correctly, notably
	  when there are no buckets defined
	* Various comment and dead-code clean-ups.

Monday, November 26 2001, James Turner
	* Re-built dispatch system with various new features:
	* Dispatcher is now abstract, since much logic has been factored
	  out in the StdBranchDispatcher
	* Split Encap dispatcher apart so it only performs de-encapsulation,